fb adding some trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 	2020 Sample Copyright
-	Making some conflicting changes
+	Making some changes to this file
 -->
 <head>
 	<title>A Great Website</title>
@@ -18,11 +18,10 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content. Adding changes before rebasing conflict. Adding some conflicting changes.
+			Just some content. Adding changes before rebasing conflict. Making some changes to this file here too.
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2020</p>
 	</footer>
 </body>
 </html>
