--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
 	2020 Sample Copyright
+	Making some conflicting changes
 -->
 <head>
 	<title>A Great Website</title>
@@ -17,11 +18,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content. Adding changes before rebasing conflict.
+			Just some content. Adding changes before rebasing conflict. Adding some conflicting changes.
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company Name 2020</p>
+		<p>&copy; Company 2020</p>
 	</footer>
 </body>
 </html>
