adding more changes after rebase

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <!--
 	2020 Sample Copyright
-	Making some changes to this file
 -->
 <head>
 	<title>A Great Website</title>
@@ -18,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content. Adding changes before rebasing conflict. Making some changes to this file here too.
+			Just some content for this page.
 		</p>
 	</main>
 	<footer class="container">
